--- a/default.html
+++ b/default.html
@@ -29,11 +29,13 @@
   <section class="container">
     <h2>Listen to our latest podcast</h2>
     <div class="row">
-      <div class="col-sm-6">
-        <iframe width="100%" height="166" scrolling="no" frameborder="no" src="https://w.soundcloud.com/player/?url=https%3A//api.soundcloud.com/tracks/260293074&amp;color=ff5500&amp;auto_play=false&amp;hide_related=false&amp;show_comments=true&amp;show_user=true&amp;show_reposts=false"></iframe>
+      <div class="col-sm-7">
+        <iframe width="100%" height="166" scrolling="no" frameborder="no" src="https://w.soundcloud.com/player/?url=https%3A//api.soundcloud.com/tracks/265442123&amp;color=ff5500&amp;auto_play=false&amp;hide_related=false&amp;show_comments=true&amp;show_user=true&amp;show_reposts=false"></iframe>
+        <!-- <iframe width="100%" height="166" scrolling="no" frameborder="no" src="https://w.soundcloud.com/player/?url=https%3A//api.soundcloud.com/tracks/260293074&amp;color=ff5500&amp;auto_play=false&amp;hide_related=false&amp;show_comments=true&amp;show_user=true&amp;show_reposts=false"></iframe> -->
       </div>
-      <div class="col-sm-4 grey centre">
-        Where slow and steady <br>truly wins the race.
+      <div class="col-sm-3 grey centre">
+        <p>Where slow and steady <br>truly wins the race.</p>
+        <p><a href="https://soundcloud.com/weareslow">Hear all episodes on Soundcloud</a></p>
       </div>
     </div>
     <h2>Be on our next podcast!</h2>
